Added final remarks

--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -12,8 +12,6 @@
 %     \item discuss future work
 % \end{itemize}
 
-\todo{strengthen the astroinformatics theme here, with linking into the introduction}
-
 The future of radio astronomy is immensely exciting, with upcoming radio surveys like EMU and POSSUM sure to revolutionise our understanding of the violent Universe occupied by radio active galactic nuclei. Without innovative new methods for processing astronomical data at scale, however, we will be limited in what interesting physics we can learn about with these surveys. In this thesis we have explored methods for identifying extragalactic radio sources in these future wide-area radio surveys. We developed a new automated cross-identification approach and a new way of classifying radio sources as Faraday complex or Faraday simple. We applied our methods to real data, and used our cross-identification method to directly probe the mechanical energy contribution of active galactic nuclei (AGN) to the intergalactic medium (IGM). Our contributions here are all aimed at extracting more information out of the very large radio surveys we have begun to face.
 
 \autoref{cha:cross-id} developed a new approach to cross-identifying radio components with their infrared host galaxies and applied this method to the CDFS and ELAIS-S1 ATLAS survey, a pilot survey for the upcoming ASKAP key survey EMU. This was the first application of machine learning to radio cross-identification. In the process, we demonstrated that our methods worked on ELAIS-S1 with similar performance to how they worked on CDFS, despite these being different parts of the sky. We also evaluated simple positional matching cross-identification on the ATLAS fields, showing better performance than either machine learning or Radio Galaxy Zoo volunteers on this dataset, which we suggest is because of how most objects in ATLAS are very compact. Our machine learning methods performed similarly whether they were trained on expert-provided or citizen science-provided labelled datasets, clearly demonstrating the benefit of citizen science labels to radio astroinformatics even if they may be less accurate than labels provided by experts. We showed that the algorithm we had developed could in principle perform much better than positional matching if only its binary accuracy could be raised, perhaps with a more complex or better-trained classifier. Finally, we concluded that ATLAS was an insufficiently complex dataset to train machine learning algorithms for future radio surveys. ATLAS contains many compact sources, and while there will be many such sources in EMU and other future surveys there will also be a zoo of partially resolved, extended, strange, or unusual morphologies. Methods designed or trained on a dataset like ATLAS, which lacks diversity of non-compact sources, will not work on the wide range of extended radio sources that will appear. More complex and larger training sets, perhaps real or perhaps simulated, will be necessary for producing algorithms intended for use in future surveys.
@@ -79,8 +77,9 @@ Our work on cross-identification allowed us to extract more information from wid
 \section{Final remarks}
 \label{sec:final-remarks}
 
-    Radio astronomy faces a deluge of data, with current and upcoming surveys delivering incredible amounts of data for science use. While we can get a lot out of these data---from investigations into new physics, to finding rare and unusual objects---doing so is dependent on the development of new methods for astronomy at scale. In this thesis we have introduced two machine learning methods for working with wide-area radio surveys and applied them to real data.
+    Radio astronomy faces a deluge of data, with current and upcoming surveys delivering incredible amounts of data for science use. While we can get a lot out of these data---from investigations into new physics, to finding rare and unusual objects---doing so is dependent on the development of new methods for astronomy at scale. These future methods will necessarily be computational, and so the challenge lies in encoding the abstract concepts of astronomy and astrophysics into a rigorously defined set of rules that a computer can interpret and execute at scale. This is decidedly non-trivial, and the nuance and unique skills required to do so motivates the burgeoning field of astroinformatics. By combining concepts from deep within the often disparate fields of astronomy and machine learning, we hope that we will be able to make the absolute most of the incredible new technologies and instruments that will arise in the future of radio astronomy.
+    % In this thesis we have introduced two machine learning methods for working with wide-area radio surveys and applied them to real data. 
 
-    something something we need to encode our astronomical knowledge in a computer which does exactly what it tells us. but that's not how astro works!
+    % something something we need to encode our astronomical knowledge in a computer which does exactly what it tells us. but that's not how astro works!
 
-\todo{reflect on the big picture from the very start of the intro in a "final remarks" section}
+% \todo{reflect on the big picture from the very start of the intro in a "final remarks" section}
