--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -2,7 +2,7 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 
-I could not have completed this thesis without my incredible supervisors: Naomi McClure-Griffiths, who stepped into my panel when circumstances required it and made me feel just as welcome in her group as any student who had been there from the beginning; Ivy Wong, who was always available to help answer my many inane questions on the depths of radio astronomy; Julie Banfield, who supervised my first year making the jump to astronomy; and Cheng Soon Ong, whose wise and witty repertoire of advice will resonate with me forever.
+I could not have completed this thesis without my incredible supervisors: Naomi McClure-Griffiths, who stepped into my panel when circumstances required it and made me feel just as welcome in her group as any student who had been there from the beginning; Ivy Wong, who was always available to help answer my many inane questions on the depths of radio astronomy; Julie Banfield, who helped me learn the ropes of astronomy and pointed out all of the important websites to me; and Cheng Soon Ong, who advised when I needed advising, pushed when I needed pushing, and was always there when I needed support.
 
 Much of this work was done in my office at Mount Stromlo while I bothered my office-mates: Eloise Birchall, Adam Rains, Lara Cullinane, and for a time Rajika Kuruwita and Alex Wallace. Without their welcome distractions I would not have been able to concentrate. Of course, Mount Stromlo was more than just my office, and I also must thank Henry Zovaro, Phil Taylor, Karlie Noon, Jack Livingston, Fiona Panther, and Alec Thomson for their contributions to the atmosphere of the observatory while I was there, as well as Howard Coyle and Michelle Cicolini for keeping the observatory running smoothly. I would also like to thank my colleagues at Data61: Cody Christopher, Steve Edwards, and Angus Gruen, who provided an excellent sounding board to my many astronomical problems.
 
