--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -161,7 +161,7 @@
     accuracy of the label set itself. `Perfect' indicates that the true labels
     of the test set were used and hence represents an upper bound on
     cross-identification accuracy with our method. `NN' is a
-    nearest-neighbours approach. Accuracies are evaluated against the expert
+    nearest neighbours approach. Accuracies are evaluated against the expert
     label set, so `Norris' labels are 100 per cent accurate by definition. The
     standard deviation of accuracies evaluated across the four quadrants of
     CDFS (\autoref{fig:quadrants}) is also shown.}
