arxiv edits and various fixes

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -119,15 +119,15 @@
     journal = {\aj},
 }
 
-@Article{     balakrishnan_pulsar_2020,
+@article{     balakrishnan_pulsar_2020,
   title     = {Pulsar Candidate Identification Using
           Semi-Supervised Generative Adversarial Networks},
   urldate   = {2020-12-08},
-  journal   = {arXiv e-prints},
+  journal = {arXiv e-prints},
+  pages = {arXiv:\linebreak{}2010.07457v1 [astro-ph.IM]},
   author    = {Balakrishnan, V. and Champion, D. and Barr, E.},
   month     = oct,
   year      = {2020},
-  eid     = {arXiv:2010.07457},
 }
 
 @Article{     ball_galaxy_2004,
@@ -323,7 +323,7 @@
 @Article{     best09radio,
   author    = {{Best}, P.~N.},
   title     = {Radio source populations: Results from {SDSS}},
-  journal   = {Astronomische Nachrichten},
+  journal   = {Astronomische \linebreak{}Nachrichten},
   year      = 2009,
   month     = feb,
   volume    = 330,
@@ -1298,7 +1298,7 @@ year = {2019}
           al.},
   year      = {2020},
   month     = {Dec},
-  pages     = {arXiv:2012.12392}
+  pages     = {arXiv:2012.12392v1 [astro-ph.IM]}
 }
 
 @Article{     holzinger_interactive_2016,
@@ -1458,7 +1458,7 @@ year = {2019}
   title     = {Adam: A Method for Stochastic Optimization},
   journal   = {3rd International Conference for Learning Representations},
   year      = {2015},
-  pages     = {arXiv:1412.6980},
+  pages     = {arXiv:1412.6980v9 [cs.LG]},
 }
 
 @Article{     kochanek01kband,
@@ -1537,7 +1537,8 @@ year = {2019}
           Sikora, Marek and {\.Z}ywucka, Natalia and Goyal, Arti},
   month     = dec,
   year      = {2020},
-  pages     = {arXiv:2012.00367},
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:2012.00367v1 [astro-ph.GA]},
 }
 
 @Article{     lacy20vlass,
@@ -1848,7 +1849,8 @@ year = {2019}
           Haiguang},
   month     = jun,
   year      = {2018},
-  pages     = {arXiv:1806.00398},
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:\linebreak{}1806.00398v1 [cs.CV]},
 }
 
 @Article{     machado_poletti_valle_shaping_2020,
@@ -1861,7 +1863,8 @@ year = {2019}
           Nagai, Daisuke},
   month     = nov,
   year      = {2020},
-  pages     = {arXiv:2011.12987},
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:2011.12987v1 [astro-ph.CO]},
 }
 
 @Article{     machalski_understanding_2011,
@@ -2045,16 +2048,18 @@ year = {2019}
   title     = {Unveiling the rarest morphologies of the {LOFAR}
           {Two}-metre {Sky} {Survey} radio source population with
           self-organised maps},
-  volume    = {2011},
+  volume    = {645},
   author    = {Mostert, Rafa{\"e}l I. J. and Duncan, Kenneth J. and
           R{\"o}ttgering, Huub J. A. and Polsterer, Kai L. and Best,
           Philip N. and Brienza, Marisa and Br{\"u}ggen, Marcus and
           Hardcastle, Martin J. and Jurlin, Nika and Mingo, Beatriz
           and Morganti, Raffaella and Shimwell, Tim and Smith, Dan
           and Williams, Wendy L.},
-  month     = nov,
-  year      = {2020},
-  pages     = {arXiv:2011.06001},
+  month     = jan,
+  year      = {2021},
+  journal   = {\aap},
+  doi       = {10.1051/0004-6361/202038500},
+  eid       = {A89},
 }
 
 @Article{     mukherjee_relativistic_2016,
@@ -2490,13 +2495,6 @@ year = {2019}
   year      = {1996}
 }
 
-@BOOK{rybicki_radiative_1979,
-       author = {{Rybicki}, George B. and {Lightman}, Alan P.},
-        title = {Radiative processes in astrophysics},
-         year = 1979,
-         publisher = {Wiley-Interscience},
-}
-
 @Book{        rybicki_radiative_2008,
   title     = {Radiative processes in astrophysics},
   publisher = {{John Wiley \& Sons}},
@@ -2577,7 +2575,9 @@ year = {2019}
   volume    = {2011},
   month     = nov,
   year      = {2020},
-  pages     = {arXiv:2011.13311},
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:2011.13311v1 [astro-ph.IM]},
+  author    = {Ashwin Samudre and Lijo George and Mahak Bansal and Yogesh Wadadekar},
 }
 
 @Article{     scalzo_skymapper_2017,
@@ -3152,8 +3152,9 @@ year = {2019}
 @Article{     zhang2019transfer,
   title     = {Transfer adaptation learning: A decade survey},
   author    = {Zhang, Lei},
-  pages     = {arXiv:1903.04687},
-  year      = {2019}
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:\linebreak{}1903.04687v2 [cs.CV]},
+  year      = {2020}
 }
 
 @Article{     zhang_applying_2020,
@@ -3258,12 +3259,13 @@ year = {2019}
   pages     = {2837--2854},
 }
 
-@Article{     zywucka_catalogue_2020,
+@inproceedings{     zywucka_catalogue_2020,
   title     = {Catalogue with visual morphological classification of
           32,616 radio galaxies with optical hosts},
-  volume    = {2003},
+  booktitle = {Proceedings of the International Astronomical Union Symposium 356: Nuclear Activity in Galaxies Across Cosmic Time},
   author    = {{\.Z}ywucka, Natalia and Kozie{\l }-Wierzbowska, Dorota
           and Goyal, Arti},
   year      = {2020},
-  pages     = {arXiv:2003.10322},
+  journal   = {arXiv e-prints},
+  pages     = {arXiv:2003.10322v1 [astro-ph.GA]},
 }
