fixed faraday effect image, ack, background

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -99,7 +99,7 @@
 
         \begin{figure}
             \centering
-            \includegraphics[width=0.8\textwidth]{images/Faraday-effect.pdf}
+            \includegraphics[width=0.8\textwidth]{images/Faraday-effect.eps}
             \caption[A Faraday screen.]{\label{fig:faraday-effect} The Faraday effect for a single Faraday screen with magnetic field $\vec B$ inducing a Faraday rotation of $\phi$. Adapted from a figure by Bob Mellish.}
         \end{figure}
 
