--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -4,7 +4,7 @@
 
 I could not have completed this thesis without my incredible supervisors: Naomi McClure-Griffiths, who stepped into my panel when circumstances required it and made me feel just as welcome in her group as any student who had been there from the beginning; Ivy Wong, who was always available to help answer my many inane questions on the depths of radio astronomy; Julie Banfield, who helped me learn the ropes of astronomy and pointed out all of the important websites to me; and Cheng Soon Ong, who advised when I needed advising, pushed when I needed pushing, and was always there when I needed support.
 
-Much of this work was done in my office at Mount Stromlo while I bothered my office-mates: Eloise Birchall, Adam Rains, Lara Cullinane, and for a time Rajika Kuruwita and Alex Wallace. Without their welcome distractions I would not have been able to concentrate. Of course, Mount Stromlo was more than just my office, and I also must thank Henry Zovaro, Phil Taylor, Karlie Noon, Jack Livingston, Fiona Panther, and Alec Thomson for their contributions to the atmosphere of the observatory while I was there, as well as Howard Coyle and Michelle Cicolini for keeping the observatory running smoothly. I would also like to thank my colleagues at Data61: Cody Christopher, Steve Edwards, and Angus Gruen, who provided an excellent sounding board to my many astronomical problems.
+Much of this work was done in my office at Mount Stromlo while I bothered my office-mates: Eloise Birchall, Adam Rains, Lara Cullinane, and for a time Rajika Kuruwita and Alex Wallace. Without their welcome distractions I would not have been able to concentrate. Of course, Mount Stromlo was more than just my office, and I also must thank Henry Zovaro, Phil Taylor, Karlie Noon, Adam Thomas, Jack Livingston, Fiona Panther, and Alec Thomson for their contributions to the atmosphere of the observatory while I was there, as well as Howard Coyle and Michelle Cicolini for keeping the observatory running smoothly. I would also like to thank my colleagues at Data61: Cody Christopher, Steve Edwards, and Angus Gruen, who provided an excellent sounding board to my many astronomical problems.
 
 Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters. I must also thank those who provided me funding over this PhD: the Australian Government, the Research School of Astronomy and Astrophysics, Data61/CSIRO, and the Astronomical Society of Australia.
 
