This is the submitted version

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -232,7 +232,7 @@
   for an object in a quadrant is predicted by binary classifiers trained on
   all other quadrants. For ELAIS-S1, we show the scores predicted by binary
   classifiers trained on each CDFS quadrant. Note that these scores have
-  \emph{not} been weighted by Gaussians. These are partial tables, and the full tables are available online at the \emph{Monthly Notices of the Royal Astronomy Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
+  \emph{not} been weighted by Gaussians. These are partial tables, and the full tables are available online at the \emph{Monthly Notices of the Royal Astronomical Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
 
   The columns of the score tables are defined as follows:
   \begin{itemize}
@@ -339,7 +339,7 @@ All & Compact & Resolved & All & Compact & Resolved & All & Compact & Resolved &
   on all other quadrants. For ELAIS-S1, we show the cross-identifications
   predicted by our method using binary classifiers trained on each CDFS
   quadrant. For CDFS, we also show the Radio Galaxy Zoo consensus, which is a
-  proxy for the difficulty of cross-identifying a component \citep{wong21rgz}. These are partial tables, and the full tables are available online at the \emph{Monthly Notices of the Royal Astronomy Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
+  proxy for the difficulty of cross-identifying a component \citep{wong21rgz}. These are partial tables, and the full tables are available online at the \emph{Monthly Notices of the Royal Astronomical Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
 
   The columns of the cross-identification tables are defined as follows:
   \begin{itemize}
@@ -524,7 +524,7 @@ J002951.26-440556.4 & 7.4636 & -44.0990 & J002951.26-440556.4 & 7.4636 & -44.099
 
 \section{Cross-identification figures}\label{sec:atlas-xid-examples}
 
-    This section contains figures of our \autoref{cha:cross-id} cross-identifications of each ATLAS radio component in CDFS and ELAIS-S1, and was originally an appendix to \citet{alger18radio}. These are just five examples, but all 469 examples are available online at the \emph{Monthly Notices of the Royal Astronomy Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
+    This section contains figures of our \autoref{cha:cross-id} cross-identifications of each ATLAS radio component in CDFS and ELAIS-S1, and was originally an appendix to \citet{alger18radio}. These are just five examples, but all 469 examples are available online at the \emph{Monthly Notices of the Royal Astronomical Society} website\footnote{\url{https://doi.org/10.1093/mnras/sty1308}}.
 
 
     \begin{figure}
